<resources>
    <string name="app_name">CopoDaAgua</string>
    <string name="tips">Toque no botão abaixo de acordo com a quantidade de ml de água consumida.</string>
    <string name="small">200ml</string>
    <string name="medium">250ml</string>
    <string name="large">700ml</string>
    <string name="today">Hoje</string>
    <string name="undo">Desfazer</string>
    <string name="result">%1$d ml</string>
</resources>